# forge

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SOUL.md  agent.yaml  eval_results.jsonl  eval_results_catchup_gpuA_v0.7.5.jsonl  eval_results_rig-00.jsonl  eval_results_rig-01.jsonl  eval_results_rig-01_v0.7.0.jsonl  eval_results_rig-02.jsonl  eval_results_rig-03.jsonl  eval_results_v0.6.0.jsonl  eval_results_v0.7.0.jsonl  eval_results_v0.7.4.jsonl  eval_results_v0.7.5.jsonl  eval_rigs.json  polish_plan.md  pyproject.toml
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  BACKEND_SETUP.md  EVAL_GUIDE.md  MODEL_GUIDE.md  MODEL_REGISTRY.md  USER_GUIDE.md  WORKFLOW.md  v0.6.0_sampling_cleanup.md
docs/decisions/: 001-ablation-framework.md  002-anthropic-baseline.md  003-thinking-label-ux.md  004-async-on-chunk.md  005-parallel-tool-calls.md  006-tool-prerequisites.md  007-report-views.md  008-stateful-eval-scenarios.md  009-bfcl-integration.md  010-tool-resolution-error.md  011-guardrail-middleware.md  012-openai-proxy.md  013-text-response-intent.md  014-recommended-sampling-opt-in.md  015-cache-control-preservation-path1.md  016-malformed-args-tool-error-channel.md  017-reasoning-replay-policy.md  MULTI_MODEL_ROUTING.md
docs/results/: ablation.md  by-family.md  dashboard.html  index.md  llamaserver.md  (+2 more)
examples/: foreign_loop.py
scripts/: check_pii.py  integration_test_proxy.py  migrate_eval_jsonl_gguf_identity.py  run_ablation.bat  run_ablation.py  smoke_test_proxy.py
tests/: conftest.py
(+162 files in other folders)
