[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge"
version = "0.2.0"
description = "A reusable framework for self-hosted LLM tool-calling and multi-step agentic workflows."
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "Antoine Zambelli"}]
readme = "README.md"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/antoinezambelli/forge"
Documentation = "https://github.com/antoinezambelli/forge/tree/main/docs"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
proxy = ["uvicorn>=0.30"]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "anthropic>=0.40",
    "mpmath",
    "uvicorn>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a running LLM backend (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"
